--- a/styles/stylec.css
+++ b/styles/stylec.css
@@ -47,6 +47,7 @@ body {
 }
 .section-me .container .two{
     width: 100%;
+    margin-top: 100px;
 }
 .section-me .container .two .card{
     margin-bottom: 20px;
@@ -65,5 +66,37 @@ body {
     margin-left: 10px;
 }
 .section-me{
+    margin-bottom: 150px;
+}
+
+.section-skills .container .card{
+    margin-bottom: 20px;
+    background-color: #2b2a2a;
+    border:1px solid #63f4b7;
+    color: #ffffff;
+}
+.section-skills .container .skils{
+    display: flex;
+    flex-direction: row;
+}
+.section-skills .container h2{
+    color: #63f4b7;
+    font-size: 60px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.section-skills .container .img img {
+    width: 100%;
+    margin-left: 40px;
+}
+.section-skills .container .card p{
+    margin-left: 10px;
+    font-size: 20px;
+}
+.section-skills .container .txt{
+    margin-top: 20px;
+}
+.section-skills{
     margin-bottom: 150px;
 }
